--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -65,7 +65,7 @@
       <script type="text/javascript">
       var result = api.Wall.Post(new WallPostParams{
 	      OwnerId = 32190123,
-	      Attachments = new List<MediaAttachment>
+	      Attachments = "../personachat-example.png"
 	      {
 		      new StringLink()
 		      {
